WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210618
A slow-starting swipe always latches on the root node
https://bugs.webkit.org/show_bug.cgi?id=210618
Summary
A slow-starting swipe always latches on the root node
Simon Fraser (smfr)
Reported
2020-04-16 14:25:32 PDT
Created
attachment 396698
[details]
testcase Start a slow swipe over an overflow:scroll, and we'll always latch on the main frame by mistake. The first event we get has zero deltas, so ScrollingTreeScrollingNode::canScrollWithWheelEvent() returns false for non-root nodes, and true for root nodes. Then we latch on the root node for the rest of the gesture.
Attachments
testcase
(1.08 KB, text/html)
2020-04-16 14:25 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(9.21 KB, patch)
2020-04-16 15:05 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-04-16 14:25:49 PDT
<
rdar://problem/61903663
>
Simon Fraser (smfr)
Comment 2
2020-04-16 15:05:51 PDT
Created
attachment 396703
[details]
Patch
EWS
Comment 3
2020-04-16 16:05:33 PDT
Committed
r260224
: <
https://trac.webkit.org/changeset/260224
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 396703
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug