Source/WebCore/page/scrolling/ScrollingTreeLatchingController.cpp
@@ -83,7 +83,7 @@ void ScrollingTreeLatchingController::nodeDidHandleEvent(const PlatformWheelEven
         return;
     }
 
-    if (!wheelEvent.shouldConsiderLatching())
+    if (wheelEvent.delta().isZero() || !wheelEvent.shouldConsiderLatching())
         return;
 
     LOG_WITH_STREAM(ScrollLatching, stream << "ScrollingTreeLatchingController " << this << " nodeDidHandleEvent: latching to " << scrollingNodeID);
